--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </header>
 
     <h2>무라카미 하루키 책 리스트</h2>
-    <div class="table-responsive">
+    <a div href="./view.html" class="table-responsive">
         <table class="table table-striped table-sm">
         <thead>
             <tr>
