--- a/add.html
+++ b/add.html
@@ -90,6 +90,8 @@
             JapanesePublishingDate.focus();
             return false;
           }
+
+          alert("게시물이 추가되었습니다.");
         }  
       </script>
     </body>
