--- a/view.html
+++ b/view.html
@@ -28,7 +28,7 @@
   <body>
     
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Murakami Haruki</a>
+      <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="./index.html">Murakami Haruki</a>
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,7 +50,7 @@
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     function deleteForm(){
-      alert("게시물을 삭제할까요?");
+      confirm("게시물을 삭제할까요?");
     }
     function editForm(){
       location.href="edit.html"
