--- a/view.html
+++ b/view.html
@@ -51,6 +51,7 @@
   <script>
     function deleteForm(){
       confirm("게시물을 삭제할까요?");
+      location.href="index.html"
     }
     function editForm(){
       location.href="edit.html"
