--- a/add.html
+++ b/add.html
@@ -11,7 +11,7 @@
     <link href="dashboard.css" rel="stylesheet">
   </head>
   <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Murakami Haruki</a>
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="./index.html">Murakami Haruki</a>
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -56,7 +56,7 @@
                 </div>
               </div>
 
-            <button class="w-100 btn btn-primary btn-lg" type="submit">입력 추가하기</button>
+            <button class="w-100 btn btn-primary btn-lg" onclick = "return returnToIndexHTML()"" type="submit">입력 추가하기</button>
           </form>
       </main>
     </div>
@@ -92,6 +92,7 @@
           }
 
           alert("게시물이 추가되었습니다.");
+          location.href="index.html";
         }  
       </script>
     </body>
