--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Framwork -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <!-- Custom styles for this template -->
         <link href="dashboard.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <style>
+            @media (max-width: 900px) {
+                .hide-on-small-screen {
+                    display: none;
+                    width:0;
+                }
+                .col-hide{
+                    display: none;
+                    width:0;
+                }
+            }
+
+        </style>
     </head>
     <body>
         <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
@@ -27,7 +40,7 @@
                 <th scope="col">일본어 책 이름</th>
                 <th scope="col">한국어 출판 년도</th>
                 <th scope="col">일본어 출판 년도</th>
-                <th scope="col">Menu</th>
+                <th scope="col" class="col-hide">Menu</th>
             </tr>
         </thead>
         <tbody>
@@ -38,8 +51,8 @@
                 <td>1991</td>
                 <td>1979</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -49,8 +62,8 @@
                 <td>1997</td>
                 <td>1980</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -60,8 +73,8 @@
                 <td>1992</td>
                 <td>1982</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -71,8 +84,8 @@
                 <td>1999</td>
                 <td>1983</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -82,8 +95,8 @@
                 <td>2012</td>
                 <td>1983</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -93,8 +106,8 @@
                 <td>2009</td>
                 <td>1983</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -104,8 +117,8 @@
                 <td>1996</td>
                 <td>1985</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -115,8 +128,8 @@
                 <td>2000</td>
                 <td>1986</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -126,8 +139,8 @@
                 <td>1993</td>
                 <td>1987</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -137,8 +150,8 @@
                 <td>1989</td>
                 <td>1988</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -148,8 +161,8 @@
                 <td>2000</td>
                 <td>1990</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -159,8 +172,8 @@
                 <td>1996</td>
                 <td>1990</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -170,8 +183,8 @@
                 <td>1996</td>
                 <td>1992</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -181,8 +194,8 @@
                 <td>1994</td>
                 <td>1994</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -192,8 +205,8 @@
                 <td>2003</td>
                 <td>1995</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -203,8 +216,8 @@
                 <td>1997</td>
                 <td>1997</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -214,8 +227,8 @@
                 <td>1998</td>
                 <td>1997</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -225,8 +238,8 @@
                 <td>1999</td>
                 <td>1999</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -236,8 +249,8 @@
                 <td>2000</td>
                 <td>2000</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -247,8 +260,8 @@
                 <td>2010</td>
                 <td>2001</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -258,8 +271,8 @@
                 <td>2003</td>
                 <td>2003</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -269,8 +282,8 @@
                 <td>2005</td>
                 <td>2004</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -280,8 +293,8 @@
                 <td>2006</td>
                 <td>2006</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -291,8 +304,8 @@
                 <td>2009</td>
                 <td>2009</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -302,8 +315,8 @@
                 <td>2014</td>
                 <td>2011</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -313,8 +326,8 @@
                 <td>2012</td>
                 <td>2012</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -324,8 +337,8 @@
                 <td>2013</td>
                 <td>2013</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -335,8 +348,8 @@
                 <td>2017</td>
                 <td>2017</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
             <tr>
@@ -346,8 +359,8 @@
                 <td>2023</td>
                 <td>2023</td>
                 <td>
-                    <i class="fa-solid fa-pencil"></i>&nbsp
-                    <i class="fa-solid fa-trash"></i>
+                    <i class="fa-solid fa-pencil hide-on-small-screen"></i>&nbsp
+                    <i class="fa-solid fa-trash hide-on-small-screen"></i>
                 </td>
             </tr>
         </tbody>
