--- a/add.html
+++ b/add.html
@@ -22,7 +22,7 @@
         <div class="title">
           <h2>새로운 책을 입력해 주세요.</h2>
         </div>
-          <form name="form1" onsubmit="return validateForm()">
+          <form name="form1" action="index.html" method="POST" onsubmit="return validateForm()">
             <div class="row g-3">
               <div class="col-12">
                 <label for="address" class="form-label">한국어 책 이름</label>
@@ -56,7 +56,7 @@
                 </div>
               </div>
 
-            <button class="w-100 btn btn-primary btn-lg" onclick = "return returnToIndexHTML()"" type="submit">입력 추가하기</button>
+            <button class="w-100 btn btn-primary btn-lg" type="submit">입력 추가하기</button>
           </form>
       </main>
     </div>
@@ -90,9 +90,9 @@
             JapanesePublishingDate.focus();
             return false;
           }
-
           alert("게시물이 추가되었습니다.");
-          location.href="index.html";
+          location.href="index.html"
+          return true;
         }  
       </script>
     </body>
