--- a/view.html
+++ b/view.html
@@ -23,6 +23,9 @@
           font-size: 3.5rem;
         }
       }
+      .information{
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -41,11 +44,21 @@
           <h1 class="fw-light">바람의 노래를 들어라</h1>
             <button name="edit" onclick="return editForm()" class="btn btn-primary my-2" type="submit">Edit</button>
             <button name="delete" onclick="return deleteForm()" class="btn btn-secondary my-2" type="submit" >Delete</button>
-            
         </div>
       </div>
     </section>
+    <div class="information">
+        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRH5mQRjAPITx6gIdAd-m3svXpG1VXvqHYWjXXQjclMfEqjHd5i">
+        <h3 for="address" class="form-label">한국어 책 이름: 바람의 노래를 들어라</h3>
+        <h3 for="address" class="form-label">일본어 책 이름: 風の歌を聴け</h3>
+        <h3 for="address" class="form-label">한국어 책 출판 년도: 1991</h3>
+        <h3 for="address" class="form-label">일본어 책 출판 년도: 1979</h3>
+      </div>
+
+
   </main>
+
+
 
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
   <script>
