--- a/view.html
+++ b/view.html
@@ -64,10 +64,10 @@
   <script>
     function deleteForm(){
       confirm("게시물을 삭제할까요?");
-      location.href="index.html"
+      location.href="./index.html"
     }
     function editForm(){
-      location.href="edit.html"
+      location.href="./edit.html"
     }
   </script>
   </body>
