--- a/add.html
+++ b/add.html
@@ -22,7 +22,7 @@
         <div class="title">
           <h2>새로운 책을 입력해 주세요.</h2>
         </div>
-          <form name="form1" action="./index.html" method="POST" onsubmit="return validateForm()">
+          <form name="form1" action="./" method="POST" onsubmit="return validateForm()">
             <div class="row g-3">
               <div class="col-12">
                 <label for="address" class="form-label">한국어 책 이름</label>
