--- a/add.html
+++ b/add.html
@@ -11,7 +11,7 @@
     <link href="dashboard.css" rel="stylesheet">
   </head>
   <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href=".">Murakami Haruki</a>
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="./index.html">Murakami Haruki</a>
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,7 +22,7 @@
         <div class="title">
           <h2>새로운 책을 입력해 주세요.</h2>
         </div>
-          <form name="form1" action="./" method="POST" onsubmit="return validateForm()">
+          <form name="form1" action="./index.html" method="POST" onsubmit="return validateForm()">
             <div class="row g-3">
               <div class="col-12">
                 <label for="address" class="form-label">한국어 책 이름</label>
@@ -91,6 +91,7 @@
             return false;
           }
           alert("게시물이 추가되었습니다.");
+
         }  
       </script>
     </body>
