--- a/add.html
+++ b/add.html
@@ -91,7 +91,7 @@
             return false;
           }
           alert("게시물이 추가되었습니다.");
-
+          window.location = "./index.html"
         }  
       </script>
     </body>
