--- a/edit.html
+++ b/edit.html
@@ -93,6 +93,7 @@
           }
 
           confirm("게시물을 수정할까요?");
+          window.location = "./index.html"
           
         }  
       </script>
