--- a/edit.html
+++ b/edit.html
@@ -23,7 +23,7 @@
           <h2>책 정보를 수정해주세요.</h2>
           <h3>수정중인 책: 바람의 소리를 들어라</h3>
         </div>
-        <form name="form1" action="./" method="POST" onsubmit="return validateForm()">
+        <form name="form1" action="./index.html" method="POST" onsubmit="return validateForm()">
             <div class="row g-3">
               <div class="col-12">
                 <label for="address" class="form-label">한국어 책 이름</label>
