--- a/view.html
+++ b/view.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="dashboard.css" rel="stylesheet">
     <style>
-      .bd-placeholder-img {
+      .imgsizecontroller {
         font-size: 1.125rem;
         text-anchor: middle;
         -webkit-user-select: none;
@@ -18,11 +18,19 @@
         user-select: none;
       }
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
+      @media (max-width: 1200px) {
+        .imgsizecontroller {
+          max-width: 50%;
+          height: auto;
         }
       }
+      @media (max-width: 500px) {
+        .imgsizecontroller {
+          max-width: 20%;
+          height: auto;
+        }
+      }
+      
       .information{
         text-align: center;
       }
@@ -48,7 +56,7 @@
       </div>
     </section>
     <div class="information">
-        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRH5mQRjAPITx6gIdAd-m3svXpG1VXvqHYWjXXQjclMfEqjHd5i">
+        <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRH5mQRjAPITx6gIdAd-m3svXpG1VXvqHYWjXXQjclMfEqjHd5i" class="imgsizecontroller">
         <h3 for="address" class="form-label">한국어 책 이름: 바람의 노래를 들어라</h3>
         <h3 for="address" class="form-label">일본어 책 이름: 風の歌を聴け</h3>
         <h3 for="address" class="form-label">한국어 책 출판 년도: 1991</h3>
